crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_assertions.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
assertion_line: 676
expression: formatted
---
// assertions.gcl -- Assertion feature tests
param mass: Mass = 100.0 kg;
param velocity: Velocity = 50.0 m/s;
param max_velocity: Velocity = 200.0 m/s;

node momentum: Force * Time = @mass * @velocity;

// Boolean assertion (should pass)
assert velocity_in_range = @velocity < @max_velocity;

// Tolerance assertion (absolute, should pass)
assert mass_approx = @mass ~= 100.1 kg +/- 1.0 kg;

// Relative behavior expressed as an absolute tolerance expression (should pass)
assert velocity_approx = @velocity ~= 49.5 m/s +/- abs(49.5 m/s) * 0.05;
