crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_assertions_assumes.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// assertions_assumes.gcl -- #[assumes] attribute test
param pressure: Dimensionless = 200.0;
param max_pressure: Dimensionless = 150.0;

// This assertion will fail
assert pressure_safe = @pressure < @max_pressure;

// This node assumes the assertion
#[assumes(pressure_safe)]
node margin: Dimensionless = @max_pressure - @pressure;
