crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_assertions_fail.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// assertions_fail.gcl -- Assertions that fail
param x: Dimensionless = 10.0;
param y: Dimensionless = 20.0;

// This assertion should fail
assert x_greater = @x > @y;
