crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_assertions_tolerance_fail.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// assertions_tolerance_fail.gcl -- Tolerance assertion that fails
param actual: Dimensionless = 100.0;

// Tolerance too tight, should fail
assert tight_check = @actual ~= 110.0 +/- 1.0;
