crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_domain_quantity.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// domain_quantity.gcl -- quantity params with domain constraints
// Two-sided constraint
param bus_mass: Mass(min: 100.0 kg, max: 2000.0 kg) = 500.0 kg;

// One-sided (min only)
param thrust: Force(min: 0.01 N) = 0.5 N;

// One-sided (max only)
param efficiency: Dimensionless(max: 1.0) = 0.85;

// Int constraint
param sample_count: Int(min: 1, max: 100) = 10;

node double_thrust: Force = @thrust * 2.0;
